@@ -12,6 +12,7 @@ depth: 1
 ## What's new
 
  * Render `help_text` when set on `FieldPanel`, `MultiFieldPanel`, `FieldRowPanel`, and other panel APIs where it previously worked without official support (Matt Westcott)
+ * Update special-purpose `FieldPanel` deprecation message to add clarity for developers (Matt Westcott)
 
 ### Bug fixes
 
