@@ -10,7 +10,9 @@ from wagtail.utils.deprecation import RemovedInWagtail50Warning
 class ImageChooserPanel(FieldPanel):
     def __init__(self, *args, **kwargs):
         warn(
-            "wagtail.images.edit_handlers.ImageChooserPanel is obsolete and should be replaced by wagtail.admin.panels.FieldPanel",
+            "ImageChooserPanel is no longer required for image choosers, and should be replaced by FieldPanel. "
+            "ImageChooserPanel will be removed in a future release. "
+            "See https://docs.wagtail.org/en/stable/releases/3.0.html#removal-of-special-purpose-field-panel-types",
             category=RemovedInWagtail50Warning,
             stacklevel=2,
         )
