@@ -5,6 +5,7 @@ Changelog
 ~~~~~~~~~~~~~~~~~~
 
 * Render `help_text` when set on `FieldPanel`, `MultiFieldPanel`, `FieldRowPanel`, and other panel APIs where it previously worked without official support (Matt Westcott)
+* Update special-purpose `FieldPanel` deprecation message to add clarity for developers (Matt Westcott)
 * Fix: Add back rendering of `help_text` for InlinePanel (Matt Westcott)
 
 4.0.2 (23.09.2022)
